@@ -4,6 +4,7 @@
 
 === 1.0.9 ===
 * Changed visibility of the dspu::InSampleStream class to public.
+* Added dspu::Filter::limit method for limiting frequency parameters of the filter.
 
 === 1.0.8 ===
 * Added MIDI note to frequency convertion function dspu::midi_note_to_frequency.
